# MCP-Vector-Shield

./: .gitignore  LICENSE  MANIFEST.in  README.md  diagnose_distances.py  fetch_mcpsecbench_data.py  fetch_mcptoolbench_data.py  fetch_mcptox_data.py  generate_mcp_data.py  pyproject.toml  requirements.txt  run_benchmark.py  run_comprehensive_benchmark.py  run_demo.py  run_massive_benchmark.py  run_secbench_test.py
.github/workflows/: publish.yml
mcp_vector_shield/: __init__.py  cli.py  mcp_classifier_engine.py  mcp_registry.py  middleware.py  proxy.py  shield_model.pt  verify.py
tests/: test_middleware.py  test_registry.py
