[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-vector-shield"
version = "0.2.0"
description = "A neural network-powered security middleware and reverse proxy for the Model Context Protocol (MCP). Detects tool poisoning, shadowing, and prompt injection attacks using deep learning classifiers trained on SentenceTransformer embeddings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Google DeepMind Advanced Agentic Coding Pair", email = "antigravity-aac@google.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "fastapi>=0.80.0",
    "uvicorn>=0.18.0",
    "numpy>=1.20.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "httpx>=0.23.0",
    "scikit-learn>=1.3.0"
]

[project.urls]
Homepage = "https://github.com/vidiptvashist/mcp-vector-shield"
Repository = "https://github.com/vidiptvashist/mcp-vector-shield.git"
"Bug Tracker" = "https://github.com/vidiptvashist/mcp-vector-shield/issues"

[project.scripts]
mcp-shield = "mcp_vector_shield.cli:main"
mcp-shield-benchmark = "run_comprehensive_benchmark:main"

[tool.setuptools]
packages = ["mcp_vector_shield"]

[tool.setuptools.package-data]
mcp_vector_shield = ["shield_model.pt"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
line-length = 100
target-version = ['py39']
